# wut_velma_gazebo

./: CMakeLists.txt  README.md  package.xml
launch/: empty_world.launch.py  generate_velma_sdf.launch.py  robot_state_publisher.launch.py  spawn_velma.launch.py
models/velma/: model.config  model.sdf
params/: velma_bridge.yaml
worlds/: empty_world.world
