<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wut_velma_gazebo</name>
  <version>2.3.7</version>
  <description>
    Gazebo simulation package for the TurtleBot3
  </description>
  <maintainer email="dawid.seredynski@pw.edu.pl">Dawid Seredyński</maintainer>
  <license>Apache 2.0</license>
  <!-- <url type="website">TODO</url> -->
  <url type="repository">https://github.com/dseredyn/wut_velma_gazebo</url>
  <!-- <url type="bugtracker">TODO</url> -->
  <author email="dawid.seredynski@pw.edu.pl">Dawid Seredyński</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>gz_sim_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_math_vendor</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
